# backend_assignemnt_taskapi

./: .env  .env.docker  .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: auth.py  auth_router.py  authentication.py  database.py  main.py  models.py  schema.py  task_router.py
app/frontend/: dashboard.html  index.html  register.html  script.js  styles.css
